--- a/Sharon's Sandbox/Yahoo API.ipynb
+++ b/Sharon's Sandbox/Yahoo API.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "id": "83d14ec4",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,9 @@
     "# market data from Yahoo\n",
     "import yfinance as yf\n",
     "# Data viz\n",
-    "import plotly.graph_objs as go"
+    "import plotly.graph_objs as go\n",
+    "import plotly.io as pio\n",
+    "pio.write_html(fig, file='figure.html', auto_open=True)"
    ]
   },
   {
@@ -44,10 +46,10 @@
     "\n",
     "    # Candlestick\n",
     "    fig.add_trace(go.Candlestick(x=data.index,\n",
-    "                                 open=BTC['Open'],\n",
-    "                                 high=BTC['High'],\n",
-    "                                 low=BTC['Low'],\n",
-    "                                 close=BTC['Close'], name='market data'))\n",
+    "                                 open=data['Open'],\n",
+    "                                 high=data['High'],\n",
+    "                                 low=data['Low'],\n",
+    "                                 close=data['Close'], name='market data'))\n",
     "\n",
     "    # Add titles\n",
     "    fig.update_layout(\n",
