--- a/Sharon's Sandbox/Sentiment training.ipynb
+++ b/Sharon's Sandbox/Sentiment training.ipynb
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0565978",
+   "id": "09534270",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "9a34b90a",
+   "id": "3c341c5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "2a539d6f",
+   "id": "75fc3708",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "45a0c4d6",
+   "id": "b31db2d5",
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "e1d94e84",
+   "id": "c4832cd7",
    "metadata": {},
    "outputs": [
     {
@@ -2240,13 +2240,30 @@
     }
    ],
    "source": [
-    ".save_pretrained('./bert-qa')"
+    "model = MyModel(num_classes).to(device)\n",
+    "optimizer = AdamW(model.parameters(), lr=2e-5, weight_decay=1e-2)\n",
+    "output_model = './models/nameOfYourModel.pth'\n",
+    "\n",
+    "# save\n",
+    "def save(model, optimizer):\n",
+    "    # save\n",
+    "    torch.save({\n",
+    "        'model_state_dict': model.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict()\n",
+    "    }, output_model)\n",
+    "\n",
+    "save(model, optimizer)\n",
+    "\n",
+    "# load\n",
+    "checkpoint = torch.load(output_model, map_location='cpu')\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51acc945",
+   "id": "adfaeb02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2254,34 +2271,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "763b5854",
+   "id": "55689458",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbcd37eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get predictions from the probabilities\n",
-    "threshold = 0.5\n",
-    "preds = np.where(probs > threshold, 1, 0)\n",
-    "# Number of tweets predicted non-negative\n",
-    "print(\"Number of tweets predicted non-negative: \", preds.sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "385b2c82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save_pretrained('./bert-qa')"
-   ]
   },
   {
    "cell_type": "code",
