--- a/Sentiment Classification/Sentiment training.ipynb
+++ b/Sentiment Classification/Sentiment training.ipynb
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0565978",
+   "id": "e19695dd",
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "9a34b90a",
+   "id": "7c540b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "2a539d6f",
+   "id": "0f5fa029",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "45a0c4d6",
+   "id": "a230aded",
    "metadata": {},
    "outputs": [
     {
@@ -2223,65 +2223,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "e1d94e84",
+   "execution_count": 110,
+   "id": "12e02066",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-102-ae190fdbb9c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_pretrained\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./bert-qa'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    ".save_pretrained('./bert-qa')"
+    "output_model = './sentiment.pth'\n",
+    "\n",
+    "# save\n",
+    "def save(bert_classifier, optimizer):\n",
+    "    # save\n",
+    "    torch.save({\n",
+    "        'bert_classifier_state_dict': bert_classifier.state_dict(),\n",
+    "        'optimizer_state_dict': optimizer.state_dict()\n",
+    "    }, output_model)\n",
+    "\n",
+    "save(bert_classifier, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "89481656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load\n",
+    "checkpoint = torch.load(output_model, map_location='cpu')\n",
+    "bert_classifier.load_state_dict(checkpoint['bert_classifier_state_dict'])\n",
+    "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51acc945",
+   "id": "aefecd5d",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "763b5854",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbcd37eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get predictions from the probabilities\n",
-    "threshold = 0.5\n",
-    "preds = np.where(probs > threshold, 1, 0)\n",
-    "# Number of tweets predicted non-negative\n",
-    "print(\"Number of tweets predicted non-negative: \", preds.sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "385b2c82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save_pretrained('./bert-qa')"
-   ]
   },
   {
    "cell_type": "code",
