--- a/CryptoPatternDetection/GAF-CNN-Flat/Morning_Evening_train_history.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-Flat/Morning_Evening_train_history.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "acting-bullet",
+   "execution_count": 2,
+   "id": "homeless-report",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virgin-circular",
+   "id": "controlling-battlefield",
    "metadata": {},
    "source": [
     "## Bitcoin, 3000 data samples(1000 morning, 1000 evening) \n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "latter-clark",
+   "id": "nearby-london",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesser-consensus",
+   "id": "victorian-notification",
    "metadata": {},
    "source": [
     "### 6 Channels "
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bacterial-capacity",
+   "id": "alike-freeze",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identified-builder",
+   "id": "naughty-pattern",
    "metadata": {},
    "source": [
     "### 5 Channels"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dried-house",
+   "id": "latin-suspect",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-speaker",
+   "id": "quality-marshall",
    "metadata": {},
    "source": [
     "## ETH, 3000 data samples(1000 morning, 1000 evening)\n",
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sorted-industry",
+   "id": "annual-peter",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-compilation",
+   "id": "fresh-breast",
    "metadata": {},
    "source": [
     "### 6 Channels"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "outer-helen",
+   "id": "quick-feelings",
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "increasing-trauma",
+   "id": "listed-netscape",
    "metadata": {},
    "source": [
     "### 5 Channels"
@@ -1576,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "understanding-master",
+   "id": "passing-chicago",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ancient-effectiveness",
+   "id": "ultimate-thickness",
    "metadata": {},
    "source": [
     "##  Feb 26, 2022\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "vertical-twelve",
+   "id": "actual-remedy",
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "athletic-election",
+   "id": "emerging-scotland",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "double-annual",
+   "id": "excess-tiger",
    "metadata": {},
    "source": [
     "### ETH, Morning_good/bad, Evening_good/bad,  [open,high,low,close,volumeto]"
@@ -2206,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "increased-receipt",
+   "id": "welsh-guyana",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "monthly-cambodia",
+   "id": "italian-bidder",
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2514,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "interested-action",
+   "id": "civilian-gardening",
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "injured-charleston",
+   "id": "loose-suicide",
    "metadata": {},
    "source": [
     "## March 2, 2022"
@@ -2833,7 +2833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electronic-usage",
+   "id": "cultural-editing",
    "metadata": {},
    "source": [
     "### BNB, Morning_good/bad, Evening_good/bad, [open,high,low,close,volumeto]"
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "otherwise-bread",
+   "id": "conceptual-freeware",
    "metadata": {},
    "source": [
     "BNB_USD,\n",
@@ -2862,7 +2862,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "other-kansas",
+   "id": "impossible-girlfriend",
    "metadata": {},
    "outputs": [
     {
@@ -3191,7 +3191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conventional-chorus",
+   "id": "preceding-afternoon",
    "metadata": {},
    "source": [
     "### fix label minor mistake( \"\" > 0)"
@@ -3200,7 +3200,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "genuine-syria",
+   "id": "liquid-george",
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "improving-reynolds",
+   "id": "swedish-dating",
    "metadata": {},
    "source": [
     "### 3 Coins combine "
@@ -3488,7 +3488,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "proved-transsexual",
+   "id": "crude-favorite",
    "metadata": {},
    "outputs": [
     {
@@ -3768,7 +3768,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "underlying-permit",
+   "id": "subsequent-basket",
    "metadata": {},
    "outputs": [
     {
@@ -4047,7 +4047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informal-multiple",
+   "id": "turkish-olympus",
    "metadata": {},
    "source": [
     "### Adjust NN, Batch Size, "
@@ -4056,7 +4056,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "sweet-doctrine",
+   "id": "collectible-revelation",
    "metadata": {},
    "outputs": [
     {
@@ -4807,9 +4807,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "arabic-draft",
+   "metadata": {},
+   "source": [
+    "# March 3 after rolling error fix\n",
+    "\n",
+    "### 3COIN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respected-secretariat",
+   "id": "complimentary-willow",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run main.py -mode=gasf+cnn -targets=3COIN_USD -sample_size=753 -feature_channels=open,high,low,close,volumeto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "controlled-duplicate",
    "metadata": {},
    "outputs": [],
    "source": []
