train on 8coin acc70

--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "latin-lincoln",
+   "execution_count": 2,
+   "id": "sapphire-arnold",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "previous-complaint",
+   "id": "official-fruit",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "continued-display",
+   "id": "connected-gravity",
    "metadata": {},
    "outputs": [
     {
@@ -113,8 +113,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "immediate-sleeping",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 9)\n",
+      "(3, 1200, 10, 10, 9)\n",
+      "(3, 1200, 10, 10, 9)\n",
+      "(3, 1200, 10, 10, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generate Comb 8Coin for category \n",
+    "#1200 MorningGood, 1200 EveningGood, Others(400 \"No Pattern\",400 MorningBad, 400 EveningBad)\n",
+    "with open('gasf_arr_8COIN3C1_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    print(a.shape)\n",
+    "with open('gasf_arr_8COIN3C2_USD', mode='rb') as f:\n",
+    "    b = pickle.load(f)\n",
+    "    print(b.shape)\n",
+    "with open('gasf_arr_8COIN3C3_USD', mode='rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "    print(c.shape)\n",
+    "    \n",
+    "third_cat = np.concatenate((a[2,:400],b[2,:400],c[2,:400]))\n",
+    "third_cat = third_cat.reshape((1,1200,10,10,9))\n",
+    "comb = np.concatenate((a[0:2], third_cat))\n",
+    "print(comb.shape)\n",
+    "with open('gasf_arr_8COIN3Ccomb2_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "\n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "mental-pocket",
+   "id": "sensitive-metropolitan",
    "metadata": {},
    "outputs": [],
    "source": []
