fix plot, train 3category on 5 features 8 coin

--- a/CryptoPatternDetection/GAF-CNN-Flat/Morning_Evening_train_history.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-Flat/Morning_Evening_train_history.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "altered-conjunction",
+   "id": "oriented-creature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-script",
+   "id": "reverse-recruitment",
    "metadata": {},
    "source": [
     "## Bitcoin, 3000 data samples(1000 morning, 1000 evening) \n",
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "realistic-illustration",
+   "id": "complete-south",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alone-intention",
+   "id": "reduced-standard",
    "metadata": {},
    "source": [
     "### 6 Channels "
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "unable-scoop",
+   "id": "radio-cleveland",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-meditation",
+   "id": "ethical-purchase",
    "metadata": {},
    "source": [
     "### 5 Channels"
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "organizational-median",
+   "id": "curious-great",
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-mainland",
+   "id": "engaged-fountain",
    "metadata": {},
    "source": [
     "## ETH, 3000 data samples(1000 morning, 1000 evening)\n",
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "administrative-opinion",
+   "id": "collective-indian",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desperate-blend",
+   "id": "acceptable-baking",
    "metadata": {},
    "source": [
     "### 6 Channels"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "textile-genetics",
+   "id": "static-today",
    "metadata": {},
    "outputs": [
     {
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "official-footage",
+   "id": "physical-diana",
    "metadata": {},
    "source": [
     "### 5 Channels"
@@ -1576,7 +1576,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "breathing-briefing",
+   "id": "underlying-store",
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-cathedral",
+   "id": "second-regard",
    "metadata": {},
    "source": [
     "##  Feb 26, 2022\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "controversial-romance",
+   "id": "equal-springfield",
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1914,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "floppy-increase",
+   "id": "ranging-qualification",
    "metadata": {},
    "outputs": [
     {
@@ -2197,7 +2197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tropical-citation",
+   "id": "cutting-architect",
    "metadata": {},
    "source": [
     "### ETH, Morning_good/bad, Evening_good/bad,  [open,high,low,close,volumeto]"
@@ -2206,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "romance-footwear",
+   "id": "welcome-ready",
    "metadata": {},
    "outputs": [
     {
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "rubber-migration",
+   "id": "unable-architect",
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2514,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "provincial-liability",
+   "id": "acknowledged-approach",
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aboriginal-devon",
+   "id": "graphic-penalty",
    "metadata": {},
    "source": [
     "## March 2, 2022"
@@ -2833,7 +2833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "numeric-lawrence",
+   "id": "entertaining-plenty",
    "metadata": {},
    "source": [
     "### BNB, Morning_good/bad, Evening_good/bad, [open,high,low,close,volumeto]"
@@ -2841,7 +2841,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "anonymous-functionality",
+   "id": "prostate-switzerland",
    "metadata": {},
    "source": [
     "BNB_USD,\n",
@@ -2862,7 +2862,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "under-posting",
+   "id": "standard-mouth",
    "metadata": {},
    "outputs": [
     {
@@ -3191,16 +3191,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "decent-tattoo",
+   "id": "broken-ensemble",
    "metadata": {},
    "source": [
-    "### fix label minor mistake( \"\" > 0)"
+    "### fix label minor mistake( \"\" - > 0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "universal-imperial",
+   "id": "massive-sport",
    "metadata": {},
    "outputs": [
     {
@@ -3479,7 +3479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-glenn",
+   "id": "absent-amount",
    "metadata": {},
    "source": [
     "### 3 Coins combine "
@@ -3488,7 +3488,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sublime-electronics",
+   "id": "indonesian-zealand",
    "metadata": {},
    "outputs": [
     {
@@ -3768,7 +3768,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "choice-titanium",
+   "id": "metallic-crazy",
    "metadata": {},
    "outputs": [
     {
@@ -4047,7 +4047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "computational-light",
+   "id": "welsh-chapel",
    "metadata": {},
    "source": [
     "### Adjust NN, Batch Size, "
@@ -4056,7 +4056,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "protected-toyota",
+   "id": "parliamentary-parallel",
    "metadata": {},
    "outputs": [
     {
@@ -4808,10 +4808,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-yesterday",
+   "id": "governing-clock",
    "metadata": {},
    "source": [
-    "# March 3 after rolling error fix\n",
+    "# March 3 after rolling error fix， Previous 5 category is wrongly labelled\n",
     "\n",
     "### 3COIN 2Conv 2Dense"
    ]
@@ -4819,7 +4819,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "improving-butter",
+   "id": "centered-teens",
    "metadata": {},
    "outputs": [
     {
@@ -5568,7 +5568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-incidence",
+   "id": "registered-manhattan",
    "metadata": {},
    "source": [
     "### 3Coin 3Conv 2Dense"
@@ -5577,7 +5577,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "powerful-engineer",
+   "id": "western-arrest",
    "metadata": {},
    "outputs": [
     {
@@ -6284,7 +6284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "average-baghdad",
+   "id": "regulation-unemployment",
    "metadata": {},
    "source": [
     "# March 4 \n",
@@ -6295,7 +6295,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "proprietary-interstate",
+   "id": "based-combination",
    "metadata": {},
    "outputs": [
     {
@@ -6426,7 +6426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "skilled-skating",
+   "id": "bottom-deputy",
    "metadata": {},
    "outputs": [],
    "source": []
