--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sapphire-arnold",
+   "id": "viral-sterling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "official-fruit",
+   "id": "pressed-dietary",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "connected-gravity",
+   "id": "musical-citation",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "immediate-sleeping",
+   "id": "sunset-works",
    "metadata": {},
    "outputs": [
     {
@@ -163,8 +163,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "restricted-luther",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generate Comb 8Coin for 5Features category \n",
+    "#1200 MorningGood, 1200 EveningGood, Others(400 \"No Pattern\",400 MorningBad, 400 EveningBad)\n",
+    "with open('gasf_arr_8COIN3C1_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "with open('gasf_arr_8COIN3C2_USD', mode='rb') as f:\n",
+    "    b = pickle.load(f)\n",
+    "    b = b[:,:,:,:,:5]\n",
+    "    print(b.shape)\n",
+    "with open('gasf_arr_8COIN3C3_USD', mode='rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "    c = c[:,:,:,:,:5]\n",
+    "    print(c.shape)\n",
+    "    \n",
+    "third_cat = np.concatenate((a[2,:400],b[2,:400],c[2,:400]))\n",
+    "third_cat = third_cat.reshape((1,1200,10,10,5))\n",
+    "comb = np.concatenate((a[0:2], third_cat))\n",
+    "print(comb.shape)\n",
+    "with open('gasf_arr_8COIN3C5Fcomb2_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "\n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "moved-swimming",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generate Comb 8Coin for 4 Features category \n",
+    "#1200 MorningGood, 1200 EveningGood, Others(400 \"No Pattern\",400 MorningBad, 400 EveningBad)\n",
+    "with open('gasf_arr_8COIN3C1_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:4]\n",
+    "    print(a.shape)\n",
+    "with open('gasf_arr_8COIN3C2_USD', mode='rb') as f:\n",
+    "    b = pickle.load(f)\n",
+    "    b = b[:,:,:,:,:4]\n",
+    "    print(b.shape)\n",
+    "with open('gasf_arr_8COIN3C3_USD', mode='rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "    c = c[:,:,:,:,:4]\n",
+    "    print(c.shape)\n",
+    "    \n",
+    "third_cat = np.concatenate((a[2,:400],b[2,:400],c[2,:400]))\n",
+    "third_cat = third_cat.reshape((1,1200,10,10,4))\n",
+    "comb = np.concatenate((a[0:2], third_cat))\n",
+    "print(comb.shape)\n",
+    "with open('gasf_arr_8COIN3C4Fcomb2_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "\n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "remarkable-intelligence",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n",
+      "(3, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generate Comb 8Coin for 5Features category \n",
+    "#1200 MorningGood, 1200 EveningGood, Others(400 \"No Pattern\",400 MorningBad, 400 EveningBad)\n",
+    "with open('gasf_arr_8COIN3C5F1_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "with open('gasf_arr_8COIN3C5F2_USD', mode='rb') as f:\n",
+    "    b = pickle.load(f)\n",
+    "    b = b[:,:,:,:,:5]\n",
+    "    print(b.shape)\n",
+    "with open('gasf_arr_8COIN3C5F3_USD', mode='rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "    c = c[:,:,:,:,:5]\n",
+    "    print(c.shape)\n",
+    "    \n",
+    "third_cat = np.concatenate((a[2,:400],b[2,:400],c[2,:400]))\n",
+    "third_cat = third_cat.reshape((1,1200,10,10,5))\n",
+    "comb = np.concatenate((a[0:2], third_cat))\n",
+    "print(comb.shape)\n",
+    "with open('gasf_arr_8COIN3C5Fcomb_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "\n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "sensitive-metropolitan",
+   "id": "found-wrong",
    "metadata": {},
    "outputs": [],
    "source": []
