3category classifer train on 4 features

--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "viral-sterling",
+   "id": "severe-steam",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "pressed-dietary",
+   "id": "published-evidence",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "musical-citation",
+   "id": "approximate-evening",
    "metadata": {},
    "outputs": [
     {
@@ -112,9 +112,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "lovely-omega",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 3 Category\n",
+    "### 9 features 1200"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "sunset-works",
+   "id": "toxic-gasoline",
    "metadata": {},
    "outputs": [
     {
@@ -162,9 +171,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "native-asbestos",
+   "metadata": {},
+   "source": [
+    "###  5 Features by slide 9 features "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "restricted-luther",
+   "id": "fourth-jesus",
    "metadata": {},
    "outputs": [
     {
@@ -215,9 +232,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "treated-noise",
+   "metadata": {},
+   "source": [
+    "###  4 Features by slide 9 features "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "moved-swimming",
+   "id": "published-august",
    "metadata": {},
    "outputs": [
     {
@@ -268,9 +293,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aquatic-simple",
+   "metadata": {},
+   "source": [
+    "###  5 Features by redo gasf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "remarkable-intelligence",
+   "id": "numeric-presence",
    "metadata": {},
    "outputs": [
     {
@@ -321,9 +354,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "destroyed-investor",
+   "metadata": {},
+   "source": [
+    "###  4 Features by redo gasf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "scenic-counter",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n",
+      "(3, 1200, 10, 10, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Generate Comb 8Coin for 4Features category \n",
+    "#1200 MorningGood, 1200 EveningGood, Others(400 \"No Pattern\",400 MorningBad, 400 EveningBad)\n",
+    "with open('gasf_arr_8COIN3C4F1_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "with open('gasf_arr_8COIN3C4F2_USD', mode='rb') as f:\n",
+    "    b = pickle.load(f)\n",
+    "    b = b[:,:,:,:,:5]\n",
+    "    print(b.shape)\n",
+    "with open('gasf_arr_8COIN3C4F3_USD', mode='rb') as f:\n",
+    "    c = pickle.load(f)\n",
+    "    c = c[:,:,:,:,:5]\n",
+    "    print(c.shape)\n",
+    "    \n",
+    "third_cat = np.concatenate((a[2,:400],b[2,:400],c[2,:400]))\n",
+    "third_cat = third_cat.reshape((1,1200,10,10,4))\n",
+    "comb = np.concatenate((a[0:2], third_cat))\n",
+    "print(comb.shape)\n",
+    "with open('gasf_arr_8COIN3C4Fcomb_USD', mode='wb') as f:\n",
+    "    pickle.dump(comb,f)\n",
+    "\n",
+    "f.close  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "found-wrong",
+   "id": "outstanding-brighton",
    "metadata": {},
    "outputs": [],
    "source": []
