2 Category classifier 8 coin

--- a/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
+++ b/CryptoPatternDetection/GAF-CNN-HC/gasf_arr/gasf_concat.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "severe-steam",
+   "id": "colored-input",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "published-evidence",
+   "id": "consistent-mobile",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "approximate-evening",
+   "id": "utility-henry",
    "metadata": {},
    "outputs": [
     {
@@ -113,17 +113,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lovely-omega",
+   "id": "varying-florence",
    "metadata": {},
    "source": [
-    "## 8 Coin 3 Category\n",
+    "## 8 Coin 3 Category (MG, EG, Others)\n",
     "### 9 features 1200"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "toxic-gasoline",
+   "id": "floating-journey",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "native-asbestos",
+   "id": "consecutive-proportion",
    "metadata": {},
    "source": [
     "###  5 Features by slide 9 features "
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fourth-jesus",
+   "id": "urban-engagement",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "treated-noise",
+   "id": "artistic-glance",
    "metadata": {},
    "source": [
     "###  4 Features by slide 9 features "
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "published-august",
+   "id": "tracked-comparison",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aquatic-simple",
+   "id": "operational-second",
    "metadata": {},
    "source": [
     "###  5 Features by redo gasf"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "numeric-presence",
+   "id": "saved-frederick",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "destroyed-investor",
+   "id": "ranking-classification",
    "metadata": {},
    "source": [
     "###  4 Features by redo gasf"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "scenic-counter",
+   "id": "stone-environment",
    "metadata": {},
    "outputs": [
     {
@@ -415,9 +415,273 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "confidential-doctrine",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (MG, MB) 9 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "academic-evaluation",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:2,:,:,:,:]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMGB_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "affected-mainstream",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (EG, EB) 9 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "optical-suggestion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[2:4,:,:,:,:]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINEGB_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "controlled-rochester",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (MG, MB) 5 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "decimal-brass",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:2,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMGB5F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "physical-romantic",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (EG, EB) 5 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "interracial-korean",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[2:4,:,:,:,:5]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINEGB5F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "northern-literacy",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (MG, MB) 4 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "continuous-ballet",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[:2,:,:,:,:4]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINMGB4F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "engaging-senegal",
+   "metadata": {},
+   "source": [
+    "## 8 Coin 2 Category (EG, EB) 4 Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "correct-ticket",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 1200, 10, 10, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function BufferedWriter.close>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open('gasf_arr_8COIN5C9F_USD', mode='rb') as f:\n",
+    "    a = pickle.load(f)\n",
+    "    a = a[2:4,:,:,:,:4]\n",
+    "    print(a.shape)\n",
+    "    \n",
+    "with open('gasf_arr_8COINEGB4F_USD', mode='wb') as f:\n",
+    "    pickle.dump(a,f)\n",
+    "    \n",
+    "f.close  "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outstanding-brighton",
+   "id": "smoking-rochester",
    "metadata": {},
    "outputs": [],
    "source": []
